--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
 body{
-    background-color: gray;
-    color: black;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(59, 59, 59);
+    box-shadow: 0 2px 5px #FF6700;
+
+}
+
+#logo{
+    height: 30px;
+}
+
+header{
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(48, 48, 48);
+    width: 100%;
+    height: 100px;
 }
